--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -4,15 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch data/db.json",
+    "build": "webpack -p",
+    "build-dev": "webpack -d --watch",
+    "start": "json-server --watch data/db.json --static ./public/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^8.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-paginate": "^6.3.2"
+    "react-paginate": "^6.3.2",
+    "webpack": "^4.43.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "webpack-cli": "^3.3.11"
+  }
 }
