--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -7,6 +7,7 @@
     "build": "webpack -p",
     "build-dev": "webpack -d --watch",
     "start": "json-server --watch data/db.json --static ./public/index.html",
+    "start-dev": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,6 +23,7 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "json-server": "^0.16.1",
     "webpack-cli": "^3.3.11"
   }
 }
