--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^8.1.0",
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
